fix : fixed the carousel, routing and alignment

--- a/src/Pages/SingleActivityPage/SingleActivityPage.css
+++ b/src/Pages/SingleActivityPage/SingleActivityPage.css
@@ -7,15 +7,18 @@
 .back-btn {
   align-self: flex-start;
 }
-.grid-view {
+.s-act-p-cont {
   margin-top: 2ch;
   height: 70ch;
   width: 90%;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  box-shadow: 0 30px 20px #f1f3f4;
   -webkit-box-shadow: 0 30px 20px #f1f3f4;
   -moz-box-shadow: 0 30px 20px #f1f3f4;
-  box-shadow: 0 30px 20px #f1f3f4;
+}
+.grid-view {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  height: 70ch;
 }
 
 .left-side-grid {
@@ -24,16 +27,16 @@
   padding: 6%;
   justify-content: space-between;
 }
-.header {
+.single-act-info-header {
   display: flex;
   flex-direction: column;
 }
-.header-child-1 {
+.single-act-info-header-child-1 {
   display: flex;
   justify-content: space-between;
   margin-bottom: -20px;
 }
-.header-child-2 {
+.single-act-info-header-child-2 {
   display: flex;
   justify-content: space-between;
   margin-top: -10px;
@@ -44,27 +47,24 @@
 .left-grid-description {
   font-size: large;
 }
-.left-grid-tour-guide {
+.single-act-left-grid-tour-guide {
   display: flex;
   flex-direction: column;
   height: 25%;
   align-self: center;
 }
-.iconStyle {
+.single-act-info-icon-style {
   width: 50px;
 }
-.icon-text {
+.single-act-info-icon-text {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-.hire-box {
+.single-act-info-hire-box {
   text-align: center;
   border: 1px solid #f1f3f4;
   padding: 25px;
   width: 400px;
   border-radius: 10px;
-}
-.hire-btn {
-  height: 30px;
 }
